src/test/contracts/negative/linearity_record_pattern_fun.mligo
type foofoo = {foo : int; bar : int}

let y = fun { foo ; foo ; bar } -> foo + bar